--- a/src/client/styles/blockly.css
+++ b/src/client/styles/blockly.css
@@ -7,7 +7,7 @@
 }
 /* Adds padding around the group of categories and separators. */
 .blocklyToolboxContents {
-  padding: 1rem;
+  padding: 0 0 0 1rem;
   @media screen and (max-width: 640px) {
     padding: 0.5rem;
   }
@@ -27,7 +27,6 @@
   margin-bottom: 0.5em;
   border-radius: 1rem;
   transition: all 0.15s ease; /* アニメーションを追加 */
-  
 }
 
 .blocklyTreeRow:hover {
@@ -96,5 +95,4 @@
 
 .highlight {
   animation: highlightCategoryButton 1s infinite;
-
 }
