⚡️ 🚧 Add block types for Minecraft extension

--- a/src/client/styles/blockly.css
+++ b/src/client/styles/blockly.css
@@ -96,3 +96,9 @@
 .highlight {
   animation: highlightCategoryButton 1s infinite;
 }
+
+/* Custom css dropdown */
+.fieldGridDropDownContainer.blocklyMenu .blocklyMenuItem { 
+  min-width: none;
+  justify-items: center;
+}
