--- a/apps/docs/src/components/Sidebar.astro
+++ b/apps/docs/src/components/Sidebar.astro
@@ -1,45 +1,35 @@
 ---
-import type { Props } from "@astrojs/starlight/props";
+import type { Props } from '@astrojs/starlight/props';
+import Default from '@astrojs/starlight/components/Sidebar.astro';
 
-const isEnglishPage = Astro.url.pathname.startsWith("/en/");
+const isEnglishPage = Astro.url.pathname.startsWith('/en/');
 
-Astro.props.sidebar = Astro.props.sidebar.filter((entry) => {
-	if (
-		isEnglishPage &&
-		entry.type === "group" &&
-		entry.label === "API リファレンス"
-	) {
-		return false;
-	}
-	if (
-		!isEnglishPage &&
-		entry.type === "group" &&
-		entry.label === "API Reference"
-	) {
-		return false;
-	}
-	if (
-		isEnglishPage &&
-		entry.type === "group" &&
-		entry.label === "API Reference"
-	) {
-		//APIリファレンス以下の再帰的に全てのリンクをチェックし、en/が含まれていたら削除する
-		function checkLink(entry: Props["sidebar"][0]) {
-			if ("entries" in entry) {
-				for (const subEntry of entry.entries) {
-					if ("href" in subEntry && subEntry.href?.includes("/en/")) {
-						console.log("remove", subEntry);
-						subEntry.href = subEntry.href.replace("/en/", "/");
-					}
-					checkLink(subEntry);
-				}
-			}
-		}
-		checkLink(entry);
-		return true;
-	}
-	return true;
-});
+Astro.props.sidebar = Astro.props.sidebar
+  .filter((entry) => {
+    if (isEnglishPage && entry.type === 'group' && entry.label === 'API リファレンス') {
+      return false;
+    }if (!isEnglishPage && entry.type === 'group' && entry.label === 'API Reference') {
+      return false;
+    }
+    if (isEnglishPage && entry.type === 'group' && entry.label === 'API Reference') {
+      //APIリファレンス以下の再帰的に全てのリンクをチェックし、en/が含まれていたら削除する
+      function checkLink(entry: Props['sidebar'][0]) {
+        if ('entries' in entry) {
+          for (const subEntry of entry.entries) {
+            if ('href' in subEntry && subEntry.href?.includes('/en/')) {
+              console.log('remove', subEntry);
+              subEntry.href = subEntry.href.replace('/en/', '/');
+            }
+            checkLink(subEntry);
+          }
+        }
+    }
+    checkLink(entry);
+return true;
+    }
+    return true;
+  });
+  
 ---
 
 <Default {...Astro.props}><slot /></Default>
