--- a/apps/docs/src/components/SiteTitle.astro
+++ b/apps/docs/src/components/SiteTitle.astro
@@ -1,8 +1,7 @@
 ---
-import type { Props } from '@astrojs/starlight/props';
 import { logos } from 'virtual:starlight/user-images';
 import config from 'virtual:starlight/user-config';
-const { siteTitle, siteTitleHref } = Astro.props;
+const { siteTitle, siteTitleHref } = Astro.locals.starlightRoute;
 ---
 
 <a href={siteTitleHref} class="site-title sl-flex">
